@@ -121,7 +121,7 @@ void ClientTest::testGetSetDMX() {
   ola::DmxSource source(buffer, timestamp, 100);
 
   // check get/set works
-  client.DMXRecieved(TEST_UNIVERSE, source);
+  client.DMXReceived(TEST_UNIVERSE, source);
   const ola::DmxSource &source2 = client.SourceData(TEST_UNIVERSE);
   OLA_ASSERT(source2.IsSet());
   OLA_ASSERT(source2.Data() == buffer);
@@ -136,7 +136,7 @@ void ClientTest::testGetSetDMX() {
   OLA_ASSERT_EQ((uint8_t) 100, source2.Priority());
 
   source.UpdateData(buffer, timestamp, 120);
-  client.DMXRecieved(TEST_UNIVERSE, source);
+  client.DMXReceived(TEST_UNIVERSE, source);
   const ola::DmxSource source3 = client.SourceData(TEST_UNIVERSE);
   OLA_ASSERT(source3.IsSet());
   OLA_ASSERT(buffer == source3.Data());
